--- a/Code/Web_Fundamentals/StyleButtonUp.css
+++ b/Code/Web_Fundamentals/StyleButtonUp.css
@@ -33,5 +33,5 @@
     border: 2px solid black;
     color: white;
     font-size: large;
-    box-shadow: 10px 5px 5px black;
+    box-shadow: 10px 5px black;
 }
