--- a/Code/Web_Fundamentals/PlottingBlocks.css
+++ b/Code/Web_Fundamentals/PlottingBlocks.css
@@ -1,14 +1,14 @@
-*{
-    outline: 1px solid red;
-}
+
 .container{
     width: 950px;
     background-color: silver;
     margin: 20px auto;
+    padding: 20px;
 }
 .top-nav {
     height: 150px;
     background-color: green;
+    margin-bottom: 15px;
 }
 .side-nav {
     height: 300px;
@@ -21,11 +21,17 @@
     width: 700px;
     background-color: red;
     display: inline-block;
+    vertical-align: top;
+    margin-left: 15px;
+    padding: 15px;
 }
 .sub-content {
     height: 200px;
     width: 210px;
     background-color: yellow;
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 20px;
 }
 #advertisement {
     height: 120px;
