--- a/Code/Web_Fundamentals/User-Card/User-Card.css
+++ b/Code/Web_Fundamentals/User-Card/User-Card.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center
 }
-    .container{
+    .card{
         width:800px;
         height:400px;
         /* background-color: lightgrey; */
