--- a/Code/Web_Fundamentals/JavaScript/exam.js/exam.css
+++ b/Code/Web_Fundamentals/JavaScript/exam.js/exam.css
@@ -200,15 +200,22 @@ main{
 
 /* Cookie Popup */
 /* stackoverflow */
-.bottom {
+.cookieContainer{
+    margin: 0 auto;
+    width: 1000px;
+    display: flex;
+    justify-content: center;
     position: fixed;
-    bottom: 0;
+    bottom: 5px;
+}
+.bottom {
     width: 1000px;
     height: 100px;
     border: 2px solid black;
     background-color: white;
     text-align: center;
     padding: 10px;
+
 }
 
 .bottom button{
